# SPL3

./: README.md
Client/: CMakeLists.txt  makefile
Client/include/: encoderDecoder.h
Client/src/: BGSclient.cpp  client.cpp  connectionHandler.cpp  encoderDecoder.cpp
Server/: RUN.txt
Server/src/main/java/bgu/spl/net/api/bidi/: BGSProtocol.java  Connections.java  ConnectionsController.java  Data.java  MessageEncoderDecoder.java  Operation.java  OperationClient.java  OperationEncoderDecoder.java  OperationProtocol.java  OperationServer.java  PostMessage.java  PrivateMessage.java  User.java  UserController.java
Server/src/main/java/bgu/spl/net/api/bidi/Operations/ClientOperations/: BlockOperation.java  FollowOperation.java  LogStatOperation.java  LoginOperation.java  LogoutOperation.java  PostMessageOperation.java  PrivateMessageOperation.java  RegisterOperation.java  StatOperation.java
Server/src/main/java/bgu/spl/net/api/bidi/Operations/ServerOperations/: ACKOperation.java  ErrorOperation.java  NotificationOperation.java
Server/src/main/java/bgu/spl/net/impl/: BGSServer.java
Server/src/main/java/bgu/spl/net/impl/BGSServer/: ReactorMain.java  TPCMain.java
Server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java
Server/src/main/java/bgu/spl/net/srv/bidi/: BlockingConnectionHandler.java  NonBlockingConnectionHandler.java
